respect order to print libraries dpendencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -915,9 +915,9 @@ endif()
 # Save extra dependencies (all required links)
 list(APPEND CHAMELEON_DEP ${EXTRA_LIBRARIES})
 # We remove duplicate dependencies ensuring that redundant libraries are placed last
-#list(REVERSE CHAMELEON_DEP)
+list(REVERSE CHAMELEON_DEP)
 list(REMOVE_DUPLICATES CHAMELEON_DEP)
-#list(REVERSE CHAMELEON_DEP)
+list(REVERSE CHAMELEON_DEP)
 
 # we add chameleon's own library
 set(CHAMELEON_LIBRARIES "chameleon")
