--- a/compute/CMakeLists.txt
+++ b/compute/CMakeLists.txt
@@ -300,6 +300,7 @@ elseif(CHAMELEON_SCHED_QUARK)
   target_link_libraries(chameleon chameleon_quark)
 endif()
 if (NOT CHAMELEON_SIMULATION)
+  # Depends on coreblas only for set_coreblas_gemm3m_enabled() (Maybe we should change that)
   add_dependencies(chameleon coreblas_include)
   target_link_libraries(chameleon coreblas)
 endif()
