--- a/compute/CMakeLists.txt
+++ b/compute/CMakeLists.txt
@@ -296,6 +296,8 @@ elseif(CHAMELEON_SCHED_PARSEC)
   target_link_libraries(chameleon chameleon_parsec)
 elseif(CHAMELEON_SCHED_QUARK)
   target_link_libraries(chameleon chameleon_quark)
+elseif(CHAMELEON_SCHED_OPENMP)
+  target_link_libraries(chameleon chameleon_openmp)
 endif()
 if (NOT CHAMELEON_SIMULATION)
   # Depends on coreblas only for set_coreblas_gemm3m_enabled() (Maybe we should change that)
