--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -311,9 +311,11 @@ if(NOT CHAMELEON_SIMULATION)
         endif()
         if(CBLAS_CFLAGS_OTHER_DEP)
             set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${CBLAS_CFLAGS_OTHER_DEP}")
+            string(REPLACE ";" " " CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
         endif()
         if(CBLAS_LDFLAGS_OTHER_DEP)
             set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${CBLAS_LDFLAGS_OTHER_DEP}")
+            string(REPLACE ";" " " CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
         endif()
         if(CBLAS_LIBRARY_DIRS_DEP)
             list(APPEND CMAKE_INSTALL_RPATH "${CBLAS_LIBRARY_DIRS_DEP}")
@@ -347,9 +349,11 @@ if(NOT CHAMELEON_SIMULATION)
         endif()
         if(LAPACKE_CFLAGS_OTHER_DEP)
             set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${LAPACKE_CFLAGS_OTHER_DEP}")
+            string(REPLACE ";" " " CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
         endif()
         if(LAPACKE_LDFLAGS_OTHER_DEP)
             set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${LAPACKE_LDFLAGS_OTHER_DEP}")
+            string(REPLACE ";" " " CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
         endif()
         if(LAPACKE_LIBRARY_DIRS_DEP)
             list(APPEND CMAKE_INSTALL_RPATH "${LAPACKE_LIBRARY_DIRS_DEP}")
@@ -451,9 +455,11 @@ if(NOT CHAMELEON_SIMULATION)
             #list(APPEND MPI_COMPILE_FLAGS "-mt_mpi")
             if(MPI_C_COMPILE_FLAGS)
                 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${MPI_C_COMPILE_FLAGS}")
+                string(REPLACE ";" " " CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
             endif()
             if(MPI_C_LINK_FLAGS)
                 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${MPI_C_LINK_FLAGS}")
+                string(REPLACE ";" " " CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
             endif()
         endif (MPI_C_FOUND)
 
@@ -553,9 +559,11 @@ else (NOT CHAMELEON_SIMULATION)
             include_directories( ${MPI_C_INCLUDE_PATH} )
             if(MPI_C_COMPILE_FLAGS)
                 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${MPI_C_COMPILE_FLAGS}")
+                string(REPLACE ";" " " CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
             endif()
             if(MPI_C_LINK_FLAGS)
                 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${MPI_C_LINK_FLAGS}")
+                string(REPLACE ";" " " CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
             endif()
         endif (MPI_C_FOUND)
 
@@ -599,10 +607,12 @@ if( CHAMELEON_SCHED_STARPU )
         endif()
         if(STARPU_CFLAGS_OTHER_DEP)
             set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${STARPU_CFLAGS_OTHER_DEP}")
+            string(REPLACE ";" " " CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
             set(CMAKE_REQUIRED_FLAGS "${STARPU_CFLAGS_OTHER_DEP}")
         endif()
         if(STARPU_LDFLAGS_OTHER_DEP)
             set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${STARPU_LDFLAGS_OTHER_DEP}")
+            string(REPLACE ";" " " CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
             set(CMAKE_REQUIRED_LDFLAGS "${STARPU_LDFLAGS_OTHER_DEP}")
         endif()
         if(STARPU_LIBRARY_DIRS_DEP)
@@ -760,9 +770,11 @@ if( CHAMELEON_SCHED_PARSEC )
       endif()
       if(PARSEC_CFLAGS_OTHER_DEP)
           set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${PARSEC_CFLAGS_OTHER_DEP}")
+          string(REPLACE ";" " " CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
       endif()
       if(PARSEC_LDFLAGS_OTHER_DEP)
           set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${PARSEC_LDFLAGS_OTHER_DEP}")
+          string(REPLACE ";" " " CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
       endif()
       if(PARSEC_LIBRARY_DIRS_DEP)
           list(APPEND CMAKE_INSTALL_RPATH "${PARSEC_LIBRARY_DIRS_DEP}")
@@ -829,9 +841,11 @@ if( CHAMELEON_SCHED_QUARK )
         endif()
         if(QUARK_CFLAGS_OTHER_DEP)
             set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${QUARK_CFLAGS_OTHER_DEP}")
+            string(REPLACE ";" " " CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
         endif()
         if(QUARK_LDFLAGS_OTHER_DEP)
             set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${QUARK_LDFLAGS_OTHER_DEP}")
+            string(REPLACE ";" " " CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
         endif()
         if(QUARK_LIBRARY_DIRS_DEP)
             list(APPEND CMAKE_INSTALL_RPATH "${QUARK_LIBRARY_DIRS_DEP}")
