--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -669,6 +669,10 @@ if( CHAMELEON_SCHED_STARPU )
         if ( HAVE_STARPU_MALLOC_ON_NODE_SET_DEFAULT_FLAGS )
             message("-- ${Blue}Add definition HAVE_STARPU_MALLOC_ON_NODE_SET_DEFAULT_FLAGS${ColourReset}")
         endif()
+        check_function_exists(starpu_mpi_init_conf HAVE_STARPU_MPI_INIT_CONF)
+        if ( HAVE_STARPU_MPI_INIT_CONF )
+            message("-- ${Blue}Add definition HAVE_STARPU_MPI_INIT_CONF${ColourReset}")
+        endif()
         check_function_exists(starpu_mpi_data_migrate HAVE_STARPU_MPI_DATA_MIGRATE)
         if ( HAVE_STARPU_MPI_DATA_MIGRATE )
             message("-- ${Blue}Add definition HAVE_STARPU_MPI_DATA_MIGRATE${ColourReset}")
