add more params into xp output

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -904,7 +904,7 @@ if( CHAMELEON_SCHED_OPENMP )
         list(APPEND OPENMP_COMPONENT_LIST "CUDA")
     endif()
 
-    find_package(${OPENMP_COMPONENT_LIST})
+    find_package(OpenMP COMPONENTS ${OPENMP_COMPONENT_LIST})
 
     # Add definition and include_dir if found
     # TODO
@@ -915,8 +915,8 @@ if( CHAMELEON_SCHED_OPENMP )
             #include_directories(${STARPU_INCLUDE_DIRS_DEP})
             #set(CMAKE_REQUIRED_INCLUDES "${STARPU_INCLUDE_DIRS_DEP}")
         #endif()
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
-        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fopenmp")
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_CXX_FLAGS}")
         #if(STARPU_LDFLAGS_OTHER_DEP)
             #set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${STARPU_LDFLAGS_OTHER_DEP}")
             #set(CMAKE_REQUIRED_LDFLAGS "${STARPU_LDFLAGS_OTHER_DEP}")
@@ -960,6 +960,7 @@ if( CHAMELEON_SCHED_OPENMP )
             #message("-- ${Blue}CHAMELEON_USE_MIGRATE is turned OFF because starpu_mpi_data_migrate not found${ColourReset}")
         #endif()
     else ( OPENMP_FOUND )
+      message(FATAL_ERROR "Something went wrong when finding OpenMP")
         #if(MORSE_VERBOSE_FIND_PACKAGE)
             #if(NOT HWLOC_FOUND OR NOT HWLOC_LIBRARIES)
                 #if (NOT HWLOC_hwloc.h_DIRS)
