--- a/runtime/starpu/CMakeLists.txt
+++ b/runtime/starpu/CMakeLists.txt
@@ -116,6 +116,7 @@ precisions_rules_py(RUNTIME_SRCS_GENERATED "${ZSRC}"
   TARGETDIR "codelets")
 
 set(RUNTIME_SRCS
+  codelets/codelet_map.c
   ${RUNTIME_COMMON}
   ${RUNTIME_SRCS_GENERATED}
   )
