--- a/runtime/starpu/CMakeLists.txt
+++ b/runtime/starpu/CMakeLists.txt
@@ -116,9 +116,9 @@ precisions_rules_py(RUNTIME_SRCS_GENERATED "${ZSRC}"
   TARGETDIR "codelets")
 
 set(RUNTIME_SRCS
-  codelets/codelet_map.c
   ${RUNTIME_COMMON}
   ${RUNTIME_SRCS_GENERATED}
+  ${CODELETS_SRC}
   )
 
 # Force generation of sources
