--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -906,120 +906,14 @@ if( CHAMELEON_SCHED_OPENMP )
 
     find_package(OpenMP COMPONENTS ${OPENMP_COMPONENT_LIST})
 
-    # Add definition and include_dir if found
-    # TODO
     if ( OPENMP_FOUND )
         message("-- ${Blue}Add definition CHAMELEON_SCHED_OPENMP"
         " - Activate OpenMP in Chameleon${ColourReset}")
-        #if (STARPU_INCLUDE_DIRS_DEP)
-            #include_directories(${STARPU_INCLUDE_DIRS_DEP})
-            #set(CMAKE_REQUIRED_INCLUDES "${STARPU_INCLUDE_DIRS_DEP}")
-        #endif()
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
         set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_CXX_FLAGS}")
-        #if(STARPU_LDFLAGS_OTHER_DEP)
-            #set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${STARPU_LDFLAGS_OTHER_DEP}")
-            #set(CMAKE_REQUIRED_LDFLAGS "${STARPU_LDFLAGS_OTHER_DEP}")
-        #endif()
-        #if(STARPU_LIBRARY_DIRS_DEP)
-            #list(APPEND CMAKE_INSTALL_RPATH "${STARPU_LIBRARY_DIRS_DEP}")
-        #endif()
-        #if (STARPU_LIBRARIES_DEP)
-            #list(INSERT CHAMELEON_DEP 0 ${STARPU_LIBRARIES_DEP})
-            #set(CMAKE_REQUIRED_LIBRARIES "${STARPU_LIBRARIES_DEP}")
-        #endif()
-        #if (CHAMELEON_SIMULATION)
-            #list(APPEND CMAKE_REQUIRED_FLAGS "-include" "starpu_simgrid_wrap.h")
-        #endif()
-        #string(REPLACE ";" " " CMAKE_REQUIRED_FLAGS "${CMAKE_REQUIRED_FLAGS}")
-        #check_function_exists(starpu_data_idle_prefetch_on_node HAVE_STARPU_IDLE_PREFETCH)
-        #if ( HAVE_STARPU_IDLE_PREFETCH )
-            #message("-- ${Blue}Add definition HAVE_STARPU_IDLE_PREFETCH${ColourReset}")
-        #endif()
-        #check_function_exists(starpu_iteration_push HAVE_STARPU_ITERATION_PUSH)
-        #if ( HAVE_STARPU_ITERATION_PUSH )
-            #message("-- ${Blue}Add definition HAVE_STARPU_ITERATION_PUSH${ColourReset}")
-        #endif()
-        #check_function_exists(starpu_data_wont_use HAVE_STARPU_DATA_WONT_USE)
-        #if ( HAVE_STARPU_DATA_WONT_USE )
-            #message("-- ${Blue}Add definition HAVE_STARPU_DATA_WONT_USE${ColourReset}")
-        #endif()
-        #check_function_exists(starpu_data_set_coordinates HAVE_STARPU_DATA_SET_COORDINATES)
-        #if ( HAVE_STARPU_DATA_SET_COORDINATES )
-            #message("-- ${Blue}Add definition HAVE_STARPU_DATA_SET_COORDINATES${ColourReset}")
-        #endif()
-        #check_function_exists(starpu_malloc_on_node_set_default_flags HAVE_STARPU_MALLOC_ON_NODE_SET_DEFAULT_FLAGS)
-        #if ( HAVE_STARPU_MALLOC_ON_NODE_SET_DEFAULT_FLAGS )
-            #message("-- ${Blue}Add definition HAVE_STARPU_MALLOC_ON_NODE_SET_DEFAULT_FLAGS${ColourReset}")
-        #endif()
-        #check_function_exists(starpu_mpi_data_migrate HAVE_STARPU_MPI_DATA_MIGRATE)
-        #if ( HAVE_STARPU_MPI_DATA_MIGRATE )
-            #message("-- ${Blue}Add definition HAVE_STARPU_MPI_DATA_MIGRATE${ColourReset}")
-        #elseif(CHAMELEON_USE_MIGRATE)
-            #set(CHAMELEON_USE_MIGRATE "OFF")
-            #message("-- ${Blue}CHAMELEON_USE_MIGRATE is turned OFF because starpu_mpi_data_migrate not found${ColourReset}")
-        #endif()
+        # TODO: check for compiler support for "_Pragma"
     else ( OPENMP_FOUND )
       message(FATAL_ERROR "Something went wrong when finding OpenMP")
-        #if(MORSE_VERBOSE_FIND_PACKAGE)
-            #if(NOT HWLOC_FOUND OR NOT HWLOC_LIBRARIES)
-                #if (NOT HWLOC_hwloc.h_DIRS)
-                    #Print_Find_Header_Status(hwloc hwloc.h)
-                #endif ()
-                #if (NOT HWLOC_hwloc_LIBRARY)
-                    #Print_Find_Library_Status(hwloc libhwloc)
-                #endif ()
-            #endif()
-            #if(CHAMELEON_ENABLE_TRACING AND (NOT FXT_FOUND OR NOT FXT_LIBRARIES))
-                #if (NOT FXT_fxt.h_DIRS)
-                    #Print_Find_Header_Status(fxt fxt.h)
-                #endif ()
-                #if (NOT FXT_fxt_LIBRARY)
-                    #Print_Find_Library_Status(fxt libfxt)
-                #endif ()
-            #endif()
-            #if(CHAMELEON_SIMULATION AND (NOT SIMGRID_FOUND OR NOT SIMGRID_LIBRARIES))
-                #if (NOT SIMGRID_simgrid.h_DIRS)
-                    #Print_Find_Header_Status(simgrid simgrid.h)
-                #endif ()
-                #if (NOT SIMGRID_simgrid_LIBRARY)
-                    #Print_Find_Library_Status(simgrid libsimgrid)
-                #endif ()
-            #endif()
-            #if( (NOT STARPU_SHM_FOUND) OR (NOT STARPU_SHM_LIBRARIES) OR
-                #( STARPU_LOOK_FOR_MPI AND (NOT STARPU_MPI_FOUND OR NOT STARPU_MPI_LIBRARIES) )
-              #)
-                #foreach(starpu_hdr ${STARPU_hdrs_to_find})
-                    #if (NOT STARPU_${starpu_hdr}_INCLUDE_DIRS)
-                        #Print_Find_Header_Status(starpu ${starpu_hdr})
-                    #endif ()
-                #endforeach()
-                #if(STARPU_VERSION_STRING)
-                    #foreach(starpu_lib ${STARPU_libs_to_find})
-                        #if (NOT STARPU_${starpu_lib}_LIBRARY)
-                            #Print_Find_Library_Status(starpu ${starpu_lib})
-                        #endif ()
-                    #endforeach()
-                #endif ()
-            #endif ()
-        #else(MORSE_VERBOSE_FIND_PACKAGE)
-            #message(WARNING "StarPU library has not been found and MORSE_VERBOSE_FIND_PACKAGE is set to OFF."
-            #" Try to activate MORSE_VERBOSE_FIND_PACKAGE option (-DMORSE_VERBOSE_FIND_PACKAGE=ON) to get some hints for the detection")
-        #endif(MORSE_VERBOSE_FIND_PACKAGE)
-        #if(NOT HWLOC_FOUND OR NOT HWLOC_LIBRARIES)
-            #message(FATAL_ERROR "hwloc library is required but has not been found")
-        #endif()
-        #if(CHAMELEON_SIMULATION AND (NOT SIMGRID_FOUND OR NOT SIMGRID_LIBRARIES))
-            #message(FATAL_ERROR "SimGrid library is required but has not been found")
-        #endif()
-        #if(CHAMELEON_ENABLE_TRACING AND (NOT FXT_FOUND OR NOT FXT_LIBRARIES))
-            #message(FATAL_ERROR "FxT library is required but has not been found")
-        #endif()
-        #if( (NOT STARPU_SHM_FOUND) OR (NOT STARPU_SHM_LIBRARIES) OR
-            #( STARPU_LOOK_FOR_MPI AND (NOT STARPU_MPI_FOUND OR NOT STARPU_MPI_LIBRARIES) )
-          #)
-            #message(FATAL_ERROR "StarPU library is required but has not been found")
-        #endif()
     endif ( OPENMP_FOUND )
 
 endif( CHAMELEON_SCHED_OPENMP )
