--- a/runtime/starpu/include/chameleon_starpu.h.in
+++ b/runtime/starpu/include/chameleon_starpu.h.in
@@ -1,6 +1,6 @@
 /**
  *
- * @file chameleon_starpu.h
+ * @file starpu/chameleon_starpu.h
  *
  * @copyright 2009-2014 The University of Tennessee and The University of
  *                      Tennessee Research Foundation. All rights reserved.
