Forgot the except master

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -253,6 +253,8 @@ coverage:
       - lcov --summary chameleon.lcov
   only:
     - branches
+  except:
+    - master
 
 coverity:
   stage: analyse
