--- a/doc/orgmode/version.org.in
+++ b/doc/orgmode/version.org.in
@@ -1,4 +1,5 @@
-#+MACRO: UPDATED 25 August 2017
-#+MACRO: UPDATED-MONTH August 2017
+#+MACRO: UPDATED {{{time(%Y-%m-%d)}}}
+#+MACRO: UPDATED-MONTH {{{time(%m-%d)}}}
+#+MACRO: UPDATED-YEAR {{{time(%Y)}}}
 #+MACRO: EDITION @CHAMELEON_VERSION_MAJOR@.@CHAMELEON_VERSION_MINOR@.@CHAMELEON_VERSION_MICRO@
 #+MACRO: VERSION @CHAMELEON_VERSION_MAJOR@.@CHAMELEON_VERSION_MINOR@.@CHAMELEON_VERSION_MICRO@
