--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -312,7 +312,7 @@ pages:
     - cd build
     - cmake .. -DCHAMELEON_ENABLE_DOC=ON
     - make doc -j5
-    - mv doc/doxygen ../public/
-    - mv doc/orgmode ../public/
+    - mv doc/doxygen/out-dev/html/ ../public/
+    - cp -r doc/orgmode/* ../public/
   only:
     - master@solverstack/chameleon
