--- a/doc/orgmode/users_guide.org.in
+++ b/doc/orgmode/users_guide.org.in
@@ -9,6 +9,10 @@
 #+HTML_HEAD:   <link rel="stylesheet" type="text/css" href="css/VisuRubriqueEncadre.css" />
 #+INCLUDE: "./version.org"
 #+AUTHOR: version {{{VERSION}}}
+This is the users guide to Chameleon.  The software ecosystem will be
+presented, the installation instructions detailed and some usage
+examples are presented.  To get more information about the application
+programming interface, please refer to the [[https://solverstack.gitlabpages.inria.fr/chameleon/doxygen/index.html][doxygen documentation]].
 * Version
   This manual documents the usage of Chameleon *version {{{VERSION}}}*.
   It was last updated on {{{UPDATED}}}.
