--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -653,6 +653,10 @@ if( CHAMELEON_SCHED_STARPU )
         if ( HAVE_STARPU_MALLOC_ON_NODE_SET_DEFAULT_FLAGS )
             message("-- ${Blue}Add definition HAVE_STARPU_MALLOC_ON_NODE_SET_DEFAULT_FLAGS${ColourReset}")
         endif()
+        check_function_exists(starpu_data_set_ooc_flag HAVE_STARPU_DATA_SET_OOC_FLAGS)
+        if ( HAVE_STARPU_DATA_SET_OOC_FLAGS )
+            message("-- ${Blue}Add definition HAVE_STARPU_DATA_SET_OOC_FLAGS${ColourReset}")
+        endif()
         check_function_exists(starpu_mpi_init_conf HAVE_STARPU_MPI_INIT_CONF)
         if ( HAVE_STARPU_MPI_INIT_CONF )
             message("-- ${Blue}Add definition HAVE_STARPU_MPI_INIT_CONF${ColourReset}")
