--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -108,7 +108,7 @@ build_openmp:
 test_starpu_branches:
   <<: *test_script
   variables:
-    TESTS_RESTRICTION: "-R \"test_shm_s|test_mpi_s\""
+    TESTS_RESTRICTION: "-R \"test_shm_s|test_mpi_s|time_ooc_shm_s|time_ooc_mpi_s\""
     VERSION: starpu
   dependencies:
     - build_starpu
