update ge/he/syssq algos to make them more generic and get the possibility to accumulate squares over columns or rows

--- a/coreblas/compute/CMakeLists.txt
+++ b/coreblas/compute/CMakeLists.txt
@@ -66,6 +66,7 @@ set(ZSRC
     core_zplghe.c
     core_zplgsy.c
     core_zplrnt.c
+    core_zplssq.c
     core_zpotrf.c
     core_zssssm.c
     core_zsymm.c
