update ge/he/syssq algos to make them more generic and get the possibility to accumulate squares over columns or rows

--- a/compute/CMakeLists.txt
+++ b/compute/CMakeLists.txt
@@ -242,6 +242,11 @@ set(ZSRC
     ##################
     zbuild.c
     pzbuild.c
+    ##################
+    # Gram
+    ##################
+    zgram.c
+    pzgram.c
 )
 
 precisions_rules_py(CHAMELEON_SRCS_GENERATED "${ZSRC}"
